contact card view

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- css -->
     <link rel="stylesheet" href="./style/bootstrap.min.css">
     <link rel="stylesheet" href="./style/style.css">
+    <div id="contact-cards"></div>
     <div id="error-messages"></div>
 </body>
 
