[FIX] split js files

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <script src="./lib/underscore-min.js"></script>
     <script src="./lib/backbone-min.js"></script>
 
+    <script src="./js/models.js"></script>
+    <script src="./js/collections.js"></script>
+    <script src="./js/views.js"></script>
     <script src="./js/utils.js"></script>
     <script src="./js/web.js"></script>
 
@@ -59,7 +62,7 @@
         </div>
     </div>
     <div id="ceo-contact-card">
-        <h3>CEO</h3></div>
+        <h3 >CEO</h3></div>
     <div id="manager-contact-cards">
         <h3>Managers</h3></div>
     <div id="regular-contact-cards">
