--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>shaike.zam :: Company Contact Phone Book</title>
+    <title>CCIS::Company Contact Info System</title>
 </head>
 
 <body>
