[FIX] change mock data and about dialog text

--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
                 </div>
                 <div class="modal-body">
                     Hi guys,<br>
-                    This is a cool <b>backbone</b> based application.<br>
-                    Just a simple contact information system.<br>
+                    This is a cool <b>backbone</b> based application - a simple contact information system.<br>
                     You can search for employees, add new contacts and upated exists (based on mock data, there isn't DB avaiable).<br>
                     Check out my Linkdin and github repo from the drop down in right.<br>
                     Have fun and stay awesome:)<br>
