[FETURE] add email to employee

--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
     <div id="new-employee" class="collapse">
         <h3>Add new employee</h3>
         <div class="form-group">
-            <label for="email">Name:</label>
-            <input type="text" class="form-control" id="new-employee-name" placeholder="Enter new employee name" name="email">
+            <label for="name">Name:</label>
+            <input type="text" class="form-control" id="new-employee-name" placeholder="Enter new employee name" name="name">
+            <label for="email">eMail:</label>
+            <input type="email" class="form-control" id="new-employee-email" placeholder="Enter valid eMail address" name="email">
             <label for="email">Position:</label>
             <select class="form-control" id="new-employee-postion">
                 <option>CEO</option>
@@ -96,6 +98,8 @@
                     <input type="text" class="form-control" id="updated-employee-id" disabled>
                     <label>Name:</label>
                     <input type="text" class="form-control" id="updated-employee-name">
+                    <label>eMail:</label>
+                    <input type="email" class="form-control" id="updated-employee-email">
                     <label>Postion:</label>
                     <select class="form-control" id="updated-employee-position" disabled>
                         <option>CEO</option>
